# ros_msft_mrtk_native

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  azure-pipelines-vcpkg.yml  azure-pipelines.yml  build.cmd  build_dotnet.cmd  build_nuget.cmd  build_target.cmd  build_tools.cmd  build_tools.repos  build_upm.cmd  init.cmd  inittools.cmd  inittree.cmd  initvcpkg.cmd  package.xml  ros2_dotnet.repos  ros2_uwp.repos
example/uwp_cpp/: App.xaml  App.xaml.cpp  App.xaml.h  MainPage.xaml  MainPage.xaml.cpp  MainPage.xaml.h  Package.appxmanifest  packages.config  uwp_cpp.sln  uwp_cpp.vcxproj  uwp_cpp.vcxproj.filters
example/uwp_cs/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  uwp_cs.csproj  uwp_cs.sln
example/uwp_cs/Properties/: AssemblyInfo.cs
nuget/: Microsoft.ROS.MRTK.Eloquent.arm.nuspec  Microsoft.ROS.MRTK.Eloquent.arm64.nuspec  Microsoft.ROS.MRTK.Eloquent.nuspec  Microsoft.ROS.MRTK.Eloquent.unity.nuspec  Microsoft.ROS.MRTK.Eloquent.x64.nuspec  Microsoft.ROS.MRTK.Eloquent.x86.nuspec  Microsoft.ROS.MRTK.Foxy.arm.nuspec  Microsoft.ROS.MRTK.Foxy.arm64.nuspec  Microsoft.ROS.MRTK.Foxy.nuspec  Microsoft.ROS.MRTK.Foxy.unity.nuspec  Microsoft.ROS.MRTK.Foxy.x64.nuspec  Microsoft.ROS.MRTK.Foxy.x86.nuspec  Microsoft.ROS.MRTK.nuget  Microsoft.ROS.MRTK.nuspec  Microsoft.ROS.MRTK.targets  build_nuget.cmd  genmeta.ps1
src/: CMakeLists.txt  Calibration.cpp  Calibration.h  build.cmd
upm/: build_upm.cmd  build_upm.ps1  folder_meta.txt  wsa_arm64_meta.txt  wsa_x64_meta.txt  x86_64_meta.txt
upm/com.microsoft.ros_mrtk_native/: LICENSE.md  package.json
