<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros-msft-mrtk-native</name>
  <version>0.0.1</version>
  <description>C wrappers for ros-msft-mrtk</description>


  <author email="t-cbaird@microsoft.com">Cameron Baird</author>
  <author email="lamadio@microsoft.com">Lou Amadio</author>

  <license>MIT</license>

  <buildtool_depend>cmake</buildtool_depend>
  
  <depend>opencv</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>